# anime-organizer-llm

./: README.md  pyproject.toml  shell.nix
.clinerules/: development_rules.md  project_description.md
anime_organizer_llm/: __init__.py  cli.py
docs-vibe/: 01-folder-tree-to-json.md  02-json-to-folder-tree.md
scripts/: gather_tree.py  rebuild_tree.py
